--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -164,6 +164,7 @@
     <Compile Include="KeyInputLabel.Designer.cs">
       <DependentUpon>KeyInputLabel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manager\OCRDataManager.cs" />
     <Compile Include="TabControl.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -240,6 +241,12 @@
       <DependentUpon>TransFormLayer.cs</DependentUpon>
     </Compile>
     <Compile Include="NaverTranslateAPI.cs" />
+    <Compile Include="TransFormOver.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TransFormOver.Designer.cs">
+      <DependentUpon>TransFormOver.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -310,6 +317,9 @@
     <EmbeddedResource Include="TransFormLayer.resx">
       <DependentUpon>TransFormLayer.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TransFormOver.resx">
+      <DependentUpon>TransFormOver.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
