1. 구글 api 안전성 증가 2. DPI 문제 수정 3. 툴팁 기능 추가.

--- a/MORT/Properties/Settings.settings
+++ b/MORT/Properties/Settings.settings
@@ -1,7 +1,25 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="MORT.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="MORT_VERSION" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">1.18dV</Value>
+    </Setting>
+    <Setting Name="BASIC_TEXT" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Monkeyhead's OCR Realtime TransLate {0}
+제작자 : 몽키해드
+로고제작 : 김엠엘
+블로그 :
+몽키해드 : http://killkimno.blog.me/
+엠엘이 : http://blog.naver.com/sabon2000
+</Value>
+    </Setting>
+    <Setting Name="LAYER_TEXT" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">MORT {0}
+레이어 번역창</Value>
+    </Setting>
+    <Setting Name="MORT_VERSION_VALUE" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1171</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
