--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -169,6 +169,18 @@
     </Compile>
     <Compile Include="Manager\OCRDataManager.cs" />
     <Compile Include="Manager\TransManager.cs" />
+    <Compile Include="NaverKeyEditor\NaverKeyEditorUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NaverKeyEditor\NaverKeyEditorUI.Designer.cs">
+      <DependentUpon>NaverKeyEditorUI.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NaverKeyEditor\NaverKeyListUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NaverKeyEditor\NaverKeyListUI.Designer.cs">
+      <DependentUpon>NaverKeyListUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="TabControl.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -252,6 +264,7 @@
     <Compile Include="TransFormOver.Designer.cs">
       <DependentUpon>TransFormOver.cs</DependentUpon>
     </Compile>
+    <Compile Include="Util.cs" />
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -278,6 +291,12 @@
     <EmbeddedResource Include="Logo.resx">
       <DependentUpon>Logo.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NaverKeyEditor\NaverKeyEditorUI.resx">
+      <DependentUpon>NaverKeyEditorUI.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NaverKeyEditor\NaverKeyListUI.resx">
+      <DependentUpon>NaverKeyListUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Observer.resx">
       <DependentUpon>Observer.cs</DependentUpon>
@@ -323,8 +342,12 @@
     <EmbeddedResource Include="TransFormOver.resx">
       <DependentUpon>TransFormOver.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
