MORT 1.202 버전 업데이트 1. 배경색 알파 기능 추가 2. 배경색 사용시 범위 변경 3. OCR 영역 없이 번역 시도 시 알림창 추가

--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -162,6 +162,12 @@
     <Compile Include="About.Designer.cs">
       <DependentUpon>About.cs</DependentUpon>
     </Compile>
+    <Compile Include="AlphaDialog\AlphaColorDialog.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="AlphaDialog\AlphaColorPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Color Picker\BinaryColorPickerForm.cs">
       <SubType>Form</SubType>
     </Compile>
