--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -143,6 +143,7 @@
     <Reference Include="System.Data.Services.Client" />
     <Reference Include="System.Management" />
     <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
@@ -231,6 +232,12 @@
     </Compile>
     <Compile Include="NaverKeyEditor\NaverKeyListUI.Designer.cs">
       <DependentUpon>NaverKeyListUI.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SettingBrowser\SettingBrowserUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SettingBrowser\SettingBrowserUI.Designer.cs">
+      <DependentUpon>SettingBrowserUI.cs</DependentUpon>
     </Compile>
     <Compile Include="TabControl.cs">
       <SubType>Component</SubType>
@@ -372,6 +379,9 @@
     <EmbeddedResource Include="SearchOptionForm.resx">
       <DependentUpon>SearchOptionForm.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SettingBrowser\SettingBrowserUI.resx">
+      <DependentUpon>SettingBrowserUI.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TabControl.resx">
       <DependentUpon>TabControl.cs</DependentUpon>
