[삭제] 1. 불필요한 리소스 제거 [추가] 1. 리모컨 리소스 수정 [수정] 1. 리모컨 수정 2. 임시 오버레이 추가 3. 번역 기억하기 문제 수정

--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -56,7 +56,7 @@
     <WarningLevel>3</WarningLevel>
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <Prefer32Bit>false</Prefer32Bit>
+    <Prefer32Bit>true</Prefer32Bit>
     <DebugSymbols>true</DebugSymbols>
     <DocumentationFile>
     </DocumentationFile>
@@ -226,6 +226,11 @@
     <Compile Include="NaverKeyEditor\NaverKeyListUI.Designer.cs">
       <DependentUpon>NaverKeyListUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SettingBrowser\SettingBrowserUI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -353,14 +358,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="rtt.resx">
       <DependentUpon>Rtt.cs</DependentUpon>
       <SubType>Designer</SubType>
@@ -569,6 +569,48 @@
     <PackageReference Include="RestSharp">
       <Version>105.2.3</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_base.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Exit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Option1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Search.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Site.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Snap Shot.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Stop.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Translate.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Snap Shot_Click.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Translate_Click.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Stop_Click.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Search_Click.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Exit_Click.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\mort_resource\Remote Controller\Remote_Option1_Click.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
