[수정] 1. ABOUT UI 개편 2. 스플라이트 토큰 수정

--- a/MORT/MORT.csproj
+++ b/MORT/MORT.csproj
@@ -612,6 +612,9 @@
   <ItemGroup>
     <None Include="Resources\mort_resource\Remote Controller\Remote_Option1_Click.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\about.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir GSTrans
